--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -22,6 +22,9 @@
     <!-- More info -->
     <%- include('includes/aboutus_sections/technology'); %>
 
+    <!-- Download -->
+    <%- include('includes/aboutus_sections/download'); %>
+
     <!-- Social Good -->
     <%- include('includes/aboutus_sections/socialGood'); %>
 
