--- a/views/includes/aboutus_sections/socialGood.ejs
+++ b/views/includes/aboutus_sections/socialGood.ejs
@@ -1,8 +1,12 @@
 <div class="socialGood">
     <div class="container">
         <h4 class="primaryGreen bold">Social Good</h4>
-        <p>
-            <%- include('../content/social_good'); %>
+        <hr>
+        <p class="bold grey-text text-darken-2">
+        <%- include('../content/social_good'); %>
         </p>
+        <div class="row button">
+            <a class="btn waves-effect waves-green tapinBtn">Read More</a>
+        </div>
     </div>
 </div>
