--- a/views/includes/aboutus_sections/sponsor.ejs
+++ b/views/includes/aboutus_sections/sponsor.ejs
@@ -1,8 +1,16 @@
 <div class="sponsor grey lighten-3">
     <div class="container">
-        <h4 class="bold center-align">Sponsor a Team/Player Today!</h4>
-        <p>
-            <%- include('../content/sponsor'); %>
-        </p>
+        <h4 class="bold center-align primaryGreen">Sponsor a Team/Player Today!</h4>
+        <div class="row">
+            <div class="col s4">
+                <img src="/images/icons/sponsor.png" class="hand">
+            </div>
+            <div class="col s8">
+                <p>
+                    <%- include('../content/sponsor'); %>
+                </p>
+                <a class="btn waves-effect waves-green tapinBtn">Visit Sponsorship Site</a>
+            </div>
+        </div>
     </div>
 </div>
