--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -1,23 +1,28 @@
 <div class="technology">
     <div class="container">
         <h4 class="primaryGreen bold">Technology</h4>
+        <hr>
+         <p>
+            <%- include('../content/technology'); %>
+        </p>
         <div class="image">
             <img class="tapinlogo" src="/images/leagues/tapin.png">
         </div>
-        <p>
-            <%- include('../content/technology'); %>
-        </p>
-        <div class="row phone">
-            <div class="phoneImage col s12 m6">
-                <img class="phone1" src="/images/phones/phone1.png">
-            </div>
-            <ul class="col s12 m6">
-                <li>Age and develpoment appropiate curriculum and coach licensing.</li>
-                <li>Full communication and scheduling tools to keep coaches and players updated in real time.</li>
-            </ul>
-        </div>
     </div>
     <div class="outergrey grey lighten-2">
+        <div class="container">
+            <div class="row phone">
+                <div class="phoneImage col s12 m6">
+                    <img class="phone1" src="/images/phones/phone1.png">
+                </div>
+                <ul class="col s12 m6">
+                    <li>Age and develpoment appropiate curriculum and coach licensing.</li>
+                    <li>Full communication and scheduling tools to keep coaches and players updated in real time.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="outergrey">
         <div class="container">
             <div class="row phone">
                 <ul class="col s12 m6">
