--- a/views/includes/content/sponsor.ejs
+++ b/views/includes/content/sponsor.ejs
@@ -1,5 +1,9 @@
-Looking to help more? 
+Just by registering to play in the GDL, you are already sponsoring a young player's participation 
+in a TapIn League in a developing nation! 
+Looking to help more? You can:
 <br>
-You can sponsor additional players for league play and uniforms for just $25 each.
-<br>
-You can sponsor an entire team in a developing nation for league play and uniforms for just $450. 
+<ul>
+    <li>Also pay these same players uniform for just $15 each!</li>
+    <li>Sponsor an entire team in a developing nation for a league play and uniforms for just $450</li>
+    <li>Sponsor another GDL player, or full GDL team, that may otherwise not be able to afford to participate</li>
+</ul>
