--- a/views/includes/aboutus_sections/ourStory.ejs
+++ b/views/includes/aboutus_sections/ourStory.ejs
@@ -1,8 +1,12 @@
 <div class="ourStory">
     <div class="container">
         <h4 class="primaryGreen bold">Our Story</h4>
-        <p>
+        <hr>
+        <p class="bold grey-text text-darken-2">
             <%- include('../content/our_story'); %> 
         </p>
+        <div class="row button">
+            <a class="btn waves-effect waves-green tapinBtn">Read More</a>
+        </div>
     </div>
 </div>
