--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -9,25 +9,42 @@
             <img class="tapinlogo" src="/images/leagues/tapin.png">
         </div>
     </div>
-    <div class="outergrey grey lighten-2">
+    <div class="outergrey grey lighten-3">
         <div class="container">
             <div class="row phone">
                 <div class="phoneImage col s12 m6">
                     <img class="phone1" src="/images/phones/phone1.png">
                 </div>
                 <ul class="col s12 m6">
-                    <li>Age and develpoment appropiate curriculum and coach licensing.</li>
-                    <li>Full communication and scheduling tools to keep coaches and players updated in real time.</li>
+                    <li>
+                        Curriculum & Coach licensing 
+                        <br>
+                        <span class="grey-text text-darken-1">Age and develpoment appropriate</span>
+                    </li>
+                    <li>
+                        Full communication & scheduling tools
+                        <br>
+                        <span class="grey-text text-darken-1">Keep coaches and players updated in real time</span>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="outergrey">
         <div class="container">
-            <div class="row phone">
+            <div class="row phone" dir="rtl">
                 <ul class="col s12 m6">
-                    <li class="right-align">Age and develpoment appropiate curriculum and coach licensing.</li>
-                    <li class="right-align">Full communication and scheduling tools to keep coaches and players updated in real time.</li>
+                    <li>
+                        Ongoing data driven assesments 
+                        <br>
+                        <span class="grey-text text-darken-1">of coach and referee performance</span>
+                    </li>
+                    <li>
+                        Real time feedback from coaches
+                        <br>
+                        <span class="grey-text text-darken-1">every player, every single match</span>
+
+                    </li>
                 </ul>
                 <div class="phoneImage2 col s12 m6">
                     <img class="phone2" src="/images/phones/phone2.png">
