--- a/views/includes/aboutus_sections/download.ejs
+++ b/views/includes/aboutus_sections/download.ejs
@@ -7,8 +7,8 @@
                 <img src="/images/social/qr.png" class="QR">
                 <div class="available">
                     <p class="white-text bold">Available On:</p>
-                    <p class="white-text bold">Apple</p>
-                    <p class="white-text bold">Android</p>
+                    <img src="/images/icons/android.png" class="android">
+                    <img src="/images/icons/ios.png" class="ios">
                 </div>
             </div>
         </div>
