--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -1,15 +1,51 @@
 <div class="container joinUsInfo">
     <h3 class="bold">What's Included?</h3>
     <hr>
-    <ul class="info">
-        <li>7 Event Schedule, Including Fields and Referees</li>
-        <li>End of Season Event</li>
-        <li>Individual Team Awards</li>
-        <li>Palla Soccer Ball</li>
-        <li>Palla Shin Gaurds</li>
-        <li>Uniqe Digital Player Card with Developement Focused Feedback and Statistics</li>
-        <li>Full Insurance Coverage</li>
-        <li>Weekly Session Plans</li>
-        <li>Weekly Skills Challenges</li>
-    </ul>
+    <div class="row">
+        <div class="col s4">
+            <div class="include valign-wrapper tapinRed">
+                7 Event Schedule, Including Fields and Referees
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinRed">
+                End of Season Event
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinRed">
+                Individual Team Awards
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinYellow">
+                Palla Soccer Ball
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinYellow">
+                Palla Shin Gaurds
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinYellow">
+                Uniqe Digital Player Card with Developement Focused Feedback and Statistics
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinBlue">
+                Full Insurance Coverage
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinBlue">
+                Weekly Session Plans
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="include valign-wrapper tapinBlue">
+                Weekly Skills Challenges
+            </div>
+        </div>    
+    </div>
 </div>
