--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -1,5 +1,6 @@
 <div class="types">
     <div class="container">
+        <h3 class="typicalTitle">Who's it For?</h3>
         <table class="typesTable" style="table-layout: fixed;"> 
             <tr class="headers">
                 <td class="grey lighten-1">Club</td>
