--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -15,9 +15,15 @@
     <%- include('includes/joinus_sections/types'); %>
 
     <!-- Info -->
-    <%- include('includes/joinus_sections/cost'); %>
+    <!-- <%- include('includes/joinus_sections/cost'); %> -->
     <%- include('includes/joinus_sections/included'); %>
     <%- include('includes/joinus_sections/howToJoin'); %>
+
+    <%- include('includes/joinus_sections/leagues'); %>
+
+    <%- include('includes/joinus_sections/contactBox'); %>
+
+    <%- include('includes/aboutus_sections/download'); %>
 
     <!-- Form -->
     <%- include('includes/joinus_sections/contactForm'); %>
