--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -3,7 +3,15 @@
         <div class="row">
             <div class="col s12 m6 content">
                 <h3>Franchise Oppurtunities</h3>
-                <p><%- include('../content/mission_statement'); %></p>
+                <p>
+                    Do you want to... 
+                    <br><br>
+                    -Make a difference AND own a succeseful business?<br>
+                    -Work for yourself?<br>
+                    -Blend your passion with your career?
+                    <br><br>
+                    Then owning a GDL franchise may be right for you!
+                </p>
             </div>
             <div class="col s6 image hide-on-small-only">
                 <img class="twoPhones" src="/images/backgrounds/shysoccerkid.png">
