--- a/views/includes/leagues_sections/header.ejs
+++ b/views/includes/leagues_sections/header.ejs
@@ -1,12 +1,12 @@
-<div class="fullImageAboutUs responsive-img">
+<div class="fullImageAboutUs fullImageLeague responsive-img">
     <div class="container">
         <div class="row">
             <div class="col s12 m6 content">
-                <h3>GDL Leagues</h3>
-                <p><%- include('../content/mission_statement'); %></p>
+                <h3 class="white-text">GDL Programs</h3>
+                <p class="white-text"><%- include('../content/leagues_header'); %></p>
             </div>
-            <div class="col s6 image hide-on-small-only">
-                <img class="twoPhones" src="/images/phones/2phones.png">
+            <div class="col s6 image hide-on-small-only ">
+                <img class="twoPhones" src="/images/player_cards/playercard3.png">
             </div>
         </div>
     </div>
