--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -788,7 +788,7 @@ div.mapContainer {
 }
 
 .download {
-    background: linear-gradient(45deg, green, #037bfc);
+    background: linear-gradient(45deg, #02af5f, #074c96);
 }
 
 .download .wrap {
@@ -823,18 +823,38 @@ div.mapContainer {
     width: 100px;
 }
 
-.download .available img {
-    height: 30px;
+.download .app {
+    display: flex;
+    align-items: center;
+}
+
+.download .app .words p{
+    margin: 0;
+}
+
+.download .app img.app-logo {
+    width: 50px;
+    height: 50px;
+    margin-right: 25px;
+    border-radius: 5px;
     cursor: pointer;
+}
+
+.download .app .words .available {
+    display: flex;
+    align-items: center;
+}
+
+.download .app .words .available img{
+    height: 30px;
+    width: 24px;
+    margin-left: 10px;
     filter: opacity(80%);
+    cursor: pointer;
 }
 
-.download .available img:hover {
+.download .app .words .available img:hover {
     filter: opacity(100%);
-}
-
-.download .available p {
-    font-size: 18px;
 }
 
 .sponsor .tapinBtn {
