--- a/views/includes/aboutus_sections/download.ejs
+++ b/views/includes/aboutus_sections/download.ejs
@@ -4,12 +4,18 @@
             <img src="/images/leagues/tapin.png" class="tapin">
             <div class="content">
                 <p class="title bold">Download TapIn League Management App</p>
-                <img src="/images/social/qr.png" class="QR">
-                <div class="available">
-                    <p class="white-text bold">Available On:</p>
-                    <img src="/images/icons/android.png" class="android">
-                    <img src="/images/icons/ios.png" class="ios">
+                <div class="app">
+                    <img src="/images/icons/tapin-icon.png" class="app-logo">
+                    <div class="words">
+                        <p class="white-text">Tapin Mobile Solutions</p>
+                        <div class="available">
+                            <p class="white-text">Available on: </p>
+                            <img src="/images/icons/android.png" class="android">
+                            <img src="/images/icons/ios.png" class="ios">
+                        </div>
+                    </div>                    
                 </div>
+                <img src="/images/social/qr.png" class="QR">
             </div>
         </div>
     </div>
