--- a/views/includes/aboutus_sections/socialGood.ejs
+++ b/views/includes/aboutus_sections/socialGood.ejs
@@ -5,8 +5,14 @@
         <p class="bold grey-text text-darken-2">
         <%- include('../content/social_good'); %>
         </p>
+        <div class="moreContent">
+            <p class="bold grey-text text-darken-2">
+                <%- include('../content/social_good_more'); %>
+            </p>
+        </div>
         <div class="row button">
-            <a class="btn waves-effect waves-green tapinBtn">Read More</a>
+            <a class="readMore btn waves-effect waves-green tapinBtn">Read More</a>
+            <a class="readLess btn waves-effect waves-green tapinBtn">Read Less</a>
         </div>
     </div>
 </div>
