--- a/views/includes/minis/whatWeDoCard.ejs
+++ b/views/includes/minis/whatWeDoCard.ejs
@@ -3,7 +3,7 @@
         <div class="card-content">
             <img class="whatWeDo-logo" src="images/icons/<%= image %>">
             <span class="card-title white-text"><%= title %></span>
-            <p class="white-text"><%= text %></p>
+            <p class="white-text  center-align"><%= text %></p>
         </div>
     </div>
 </div>
