--- a/views/includes/leagues_sections/info.ejs
+++ b/views/includes/leagues_sections/info.ejs
@@ -44,5 +44,55 @@
                 </td>
             </tr>
         </table>
+        <table class="mobile" style="display: none;">
+            <tr>
+                <td class="tapinRed">
+                    <p class="bold">Format</p>
+                    <i class="material-icons">file_download</i>
+                </td>
+            </tr>
+            <tr>
+                <td class="tapinRed lighter">
+                    <ul>
+                        <li>U7 AND U8 PLAYERS</li>
+                        <li>7 GAME SEASON</li>
+                        <li>4 FESTIVAL Format</li>
+                        <li>FESTIVALS EVERY OTHER WEEK</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td class="tapinYellow">
+                    <p class="bold">Rules</p>
+                    <i class="material-icons">file_download</i>
+                </td>
+            </tr>
+            <tr>
+                <td class="tapinYellow lighter">
+                    <ul>
+                        <li>4X4, NO GK'S</li>
+                        <li>25X35 YDS FIELD, 3X5FT GOALS</li>
+                        <li>1 REFEREE</li>
+                        <li>40 MIN GAMES- 4 QUATERS</li>
+                    </ul>
+                </td>   
+            </tr>
+            <tr>
+                <td class="tapinBlue">
+                    <p class="bold">Reccomendations</p>
+                    <i class="material-icons">file_download</i>
+                </td>
+            </tr>
+            <tr>
+                <td class="tapinBlue lighter">
+                    <ul>
+                        <li>LIMIT SUBS</li>
+                        <li>BALANCE PLAYING TIME</li>
+                        <li>ROTATE POSITIONS</li>
+                        <li>CONTROL ENVIRONMENT</li>
+                    </ul>
+                </td> 
+            </tr>
+        </table>
     </div>
 </div>
