--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -15,9 +15,37 @@
                 <td><img class="sticker" src="/images/stickers/clap.png"></td>
             </tr>
         </table>
+        <table class="mobile">
+            <tr>
+                <td class="red">
+                    Hardest worker
+                </td>
+            </tr>
+            <tr>
+                <td><img class="sticker" src="/images/stickers/heart.png"></td>
+            </tr>
+            <tr>
+                <td class="grey">Best Student</td>
+            </tr>
+            <tr>
+                <td><img class="sticker" src="/images/stickers/gear.png"></td>
+            </tr>
+            <tr>
+                <td class="green">Best Sportsman</td>
+            </tr>
+            <tr>
+                <td><img class="sticker" src="/images/stickers/handshake.png"></td>
+            </tr>
+            <tr>
+                <td class="blue">Great Play</td>
+            </tr>
+            <tr>
+                <td><img class="sticker" src="/images/stickers/clap.png"></td>
+            </tr>
+        </table>
         <div class="row">
             <div class="image">
-                <img src="/images/player_cards/playercard3.png" style="height: 400px;">
+                <img src="/images/player_cards/playercard3.png">
             </div>
         </div>
     </div>
