--- a/views/includes/leagues_sections/header.ejs
+++ b/views/includes/leagues_sections/header.ejs
@@ -1,11 +1,11 @@
 <div class="fullImageAboutUs fullImageLeague responsive-img">
     <div class="container">
         <div class="row">
-            <div class="col s12 m6 content">
-                <h3 class="white-text">GDL Programs</h3>
+            <div class="col s12 l6 content">
+                <h3 class="white-text">GDL <span>Programs</span></h3>
                 <p class="white-text"><%- include('../content/leagues_header'); %></p>
             </div>
-            <div class="col s6 image hide-on-small-only ">
+            <div class="col s6 image hide-on-med-and-down">
                 <img class="twoPhones" src="/images/player_cards/playercard3.png">
             </div>
         </div>
