--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -1,9 +1,9 @@
 <div class="fullImageFranchise responsive-img">
     <div class="container">
         <div class="row">
-            <div class="col s12 m6 content">
-                <h3>Franchise Oppurtunities</h3>
-                <p>
+            <div class="col s12 l6 content">
+                <h3>Franchise <span>Oppurtunities</span></h3>
+                <p >
                     Do you want to... 
                     <br><br>
                     -Make a difference AND own a succeseful business?<br>
@@ -13,7 +13,7 @@
                     Then owning a GDL franchise may be right for you!
                 </p>
             </div>
-            <div class="col s6 image hide-on-small-only">
+            <div class="col s6 image hide-on-med-and-down">
                 <img class="twoPhones" src="/images/backgrounds/shysoccerkid.png">
             </div>
         </div>
