--- a/views/includes/joinus_sections/contactBox.ejs
+++ b/views/includes/joinus_sections/contactBox.ejs
@@ -1,18 +1,22 @@
 <div class="contactBox">
     <div class="container">
-        <div class="row">
-            <div class="box z-depth-3">
-                <img src="/images/leagues/question.png">
-                <div class="content">
-                    <p class="title bold">Contact Us</p>
-                    <p class="info">
-                        Don't see your state logo?
-                        <br>
-                        <br>
-                        Let us know you are interested in starting, or registering for, a league
-                        near you. Thanks and we look forward to seeing you back out on the field!
-                    </p>
+        <div class="box z-depth-3">
+            <div class="row">
+                <div class="col s12 m6 l3" style="text-align: center;">
+                    <img src="/images/leagues/question.png">
                 </div>
+                <div class="col s12 m6 l9">
+                    <div class="content">
+                        <p class="title bold">Contact Us</p>
+                        <p class="info">
+                            Don't see your state logo?
+                            <br>
+                            <br>
+                            Let us know you are interested in starting, or registering for, a league
+                            near you. Thanks and we look forward to seeing you back out on the field!
+                        </p>
+                    </div>
+                </div> 
             </div>  
         </div>
     </div>
