--- a/views/includes/joinus_sections/contactForm.ejs
+++ b/views/includes/joinus_sections/contactForm.ejs
@@ -111,7 +111,9 @@
                 </p>
             </div>
         </div>
-        <button class="btn waves-effect waves-light green hoverable">Submit</button>
+        <div class="row button">
+          <button class="btn waves-effect waves-light green hoverable tapinBtn">Submit</button>
+        </div>
         </form>
     </div>
 </div>
