--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -2,47 +2,47 @@
     <h3 class="bold">What's Included?</h3>
     <hr>
     <div class="row">
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
                 7 Event Schedule, Including Fields and Referees
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
                 End of Season Event
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
                 Individual Team Awards
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
                 Palla Soccer Ball
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
                 Palla Shin Gaurds
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
                 Uniqe Digital Player Card with Developement Focused Feedback and Statistics
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinBlue">
                 Full Insurance Coverage
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinBlue">
                 Weekly Session Plans
             </div>
         </div>
-        <div class="col s4">
+        <div class="col s12 l4">
             <div class="include valign-wrapper tapinBlue">
                 Weekly Skills Challenges
             </div>
