mobile navbar links

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -17,9 +17,9 @@
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a href="#" class="green-text text-darken-3">Leagues</a></li>
-    <li><a href="#" class="green-text text-darken-3">Franchise</a></li>
-    <li><a href="#" class="green-text text-darken-3">Join</a></li>
+    <li><a href="/leagues" class="green-text text-darken-3">Leagues</a></li>
+    <li><a href="/franchise" class="green-text text-darken-3">Franchise</a></li>
+    <li><a href="/joinUs" class="green-text text-darken-3">Join</a></li>
     <li><a href="/aboutus" class="green-text text-darken-3">About Us</a></li>
-    <li><a href="#" class="green-text text-darken-3">Contact Us</a></li>
+    <li><a href="/news" class="green-text text-darken-3">News</a></li>
 </ul>
