--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -7,7 +7,7 @@
                 <p class="name bold">Steve Schecter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">Founder of TapIn, ExchangeBlvd</p>
-                <p class="description left-align">
+                <p class="description">
                     <%- include('../content/steveDescription'); %>
                 </p>
             </div>
@@ -16,7 +16,7 @@
                 <p class="name bold">Craig Porter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">Product Strategy of TapIn</p>
-                <p class="description left-align">
+                <p class="description">
                     <%- include('../content/craigDescription'); %>
                 </p>
             </div>
@@ -25,7 +25,7 @@
                 <p class="name bold">Justin Capell</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">former COO of GPS</p>
-                <p class="description left-align">
+                <p class="description">
                     <%- include('../content/justinDescription'); %>
                 </p>
             </div>
