--- a/views/includes/aboutus_sections/header.ejs
+++ b/views/includes/aboutus_sections/header.ejs
@@ -1,11 +1,11 @@
 <div class="fullImageAboutUs responsive-img">
     <div class="container">
         <div class="row">
-            <div class="col s12 m6 content">
+            <div class="col s12 l6 content">
                 <h3>About Us</h3>
                 <p><%- include('../content/mission_statement'); %></p>
             </div>
-            <div class="col s6 image hide-on-small-only">
+            <div class="col s6 image hide-on-med-and-down">
                 <img class="twoPhones" src="/images/phones/2phones.png">
             </div>
         </div>
