--- a/views/includes/aboutus_sections/sponsor.ejs
+++ b/views/includes/aboutus_sections/sponsor.ejs
@@ -2,10 +2,10 @@
     <div class="container">
         <h4 class="bold center-align primaryGreen">Sponsor a Team/Player Today!</h4>
         <div class="row">
-            <div class="col s4">
+            <div class="col s12 l4">
                 <img src="/images/icons/sponsor.png" class="hand">
             </div>
-            <div class="col s8">
+            <div class="col s12 l8">
                 <p>
                     <%- include('../content/sponsor'); %>
                 </p>
