--- a/views/includes/minis/newsStory.ejs
+++ b/views/includes/minis/newsStory.ejs
@@ -3,6 +3,7 @@
         <div class="top">
             <div class="league <%= league %>">GDL <%= league %></div>
             <p class="title bold"><%= title %></p>
+            <div class="leagueSmall <%= league %>">GDL <%= league %></div>
         </div>
         <p class="info center-align"><%= info %></p>
     </div>
